test/tests/stages/18_structures/invalid_types/extra_credit/incompatible_union_types/return_type_mismatch.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  union
  identifier(u)
  {
  int
  identifier(x)
  ;
  }
  ;
  union
  identifier(u)
  identifier(return_union)
  (
  void
  )
  {
  union
  identifier(u)
  {
  int
  identifier(x)
  ;
  }
  ;
  union
  identifier(u)
  identifier(result)
  =
  {
  const int(10)
  }
  ;
  return
  identifier(result)
  ;
  }
